# 3-python-package-usps-525-3-violation

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml  build.yml
src/packagepackage/: __init__.py  __main__.py  package.py  wordbank.py
src/quizlearnpackage/: __main__.py  quizlearn.py
test/: test_package.py  test_quizlearn.py
