[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packagepackage"
description = "[TEST] of a package developed with pipenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.1.3"
authors = [
  { name="Tim Xu", email="tzx201@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
examplepackagefb1258 = "packagepackage.__main__:main"